# grpc-toy

./: Cargo.toml  README.md  build.rs
protos/: hello.proto
src/: hello.rs  main.rs
tests/: integration.rs
