[package]
name = "grpc-toy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
tonic = "0.10.0"
tonic-health = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prost = "0.12.0"
tub = "0.3.7"

[build-dependencies]
tonic-build = "0.10.0"
